chore: Add gradient blue variable and update landing page layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,6 +31,7 @@ const { title } = Astro.props;
 			rgb(var(--accent-light)) 30%,
 			white 60%
 		);
+		--gradiant-blue: linear-gradient(45deg, #0041f2, #05bde6);
 	}
 	html {
 		font-family: system-ui, sans-serif;
