Refactor API endpoints for image optimization and shortening

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import AstroLogo from '@components/icons/astro.astro';
 			<input type="text" id="url" placeholder="Enter your URL" name="url" />
 			<button id="shorten">Shorten</button>
 		</div>
-		
+		<img src="/api/image/y-wTDH" alt="Shorten your URL" style="width: 100%; margin-top: 2rem;" />
 	</main>
 </Layout>
 
